# seqme

./: .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
docs/: api.rst  citing.rst  conf.py  contributing.md  contributing_guide.md  index.rst  installation.rst  requirements.txt
docs/_static/css/: overwrite.css
docs/_templates/autosummary/: class.rst
docs/api/: core_index.rst  metrics_index.rst  models_index.rst  models_plots_index.rst  utils_index.rst
docs/examples/: getting_started.ipynb  index.rst  third_party.ipynb
docs/tutorials/: benchmark.ipynb  benchmark_peptides.ipynb  benchmark_rna.ipynb  best_practices.ipynb  beyond_sequences.ipynb  diagnostics.ipynb  getting_started.ipynb  index.rst  third_party.ipynb  time_series.ipynb  visualization.ipynb
examples/: notebook.ipynb
notebooks/: amp_examples.ipynb  benchmark.ipynb  getting_started.ipynb  physicochemical.ipynb  third_party.ipynb  thirdparty.ipynb  visualization.ipynb
src/pepme/: __init__.py  base.py  core.py  gmm.py  gravy.py  hello.py  novelty.py  plots.py  random_sampler.py  third_party.py  utils.py
src/pepme/embeddings/: esm2.py  huggingface_embeddings.py  kmers.py  kmers_embeddings.py  physicochemical_embeddings.py  properties.py
src/pepme/metrics/: __init__.py  authenticity.py  conformity_score.py  count.py  diversity.py  fbd.py  fid.py  fld.py  fold.py  gravy.py  hitrate.py  hypervolume.py  id.py  improved_precision_recall.py  jaccard_similarity.py  js.py  kl_divergence.py  mmd.py  novelty.py  precision_recall.py  threshold.py  uniqueness.py
src/pepme/models/: __init__.py  concatenate.py  diagnostics.py  esm2.py  normalizers.py  physicochemical.py  plots.py  third_party.py
src/pepme/models/embeddings/: __init__.py  esm2.py  kmers.py  plots.py  properties.py
src/pepme/models/properties/: __init__.py  ensemble.py  physicochemical.py  plots.py
src/pepme/properties/: gravy.py  normalizers.py  physico_chemical.py  physicochemical_properties.py
src/pepme/utils/: engine_cfg.py  fasta_io.py  progress.py
src/seqme/: __init__.py  core.py  plots.py
src/seqme/core/: base.py  io.py  pareto.py  plots.py  rank.py  tables.py
src/seqme/metrics/: __init__.py  authenticity.py  clipped_density.py  clipped_density_coverage.py  conformity_score.py  count.py  diversity.py  fbd.py  fkea.py  fold.py  hitrate.py  hypervolume.py  id.py  jaccard_similarity.py  kl_divergence.py  length.py  mmd.py  mutational_robustness.py  novelty.py  precision_recall.py  subset.py  threshold.py  uniqueness.py
src/seqme/models/: __init__.py  concatenate.py  diagnostics.py  dna_bert2.py  ensemble.py  esm2.py  esm_fold.py  esm_if1.py  exceptions.py  gena_lm.py  hyformer.py  kmers.py  molecule_descriptors.py  normalizers.py  pca.py  physicochemical.py  prost_t5.py  rna_fm.py  third_party.py
src/seqme/utils/: __init__.py  diagnostics.py  plots.py  projection.py  sequences.py
tests/: test_authenticity.py  test_compute_metrics.py  test_conformity_score.py  test_count.py  test_diversity.py  test_esm2_embeddings.py  test_fid.py  test_fld.py  test_fold.py  test_hello.py  test_hitrate.py  test_hypervolume.py  test_imporved_precision_recall.py  test_js.py  test_kmer_jaccard_similarity.py  test_kmers_embeddings.py  test_mmd.py  test_novelty.py  test_physicochemical_properties.py  test_precision_recall.py  test_random_sampling.py  test_uniqueness.py
tests/core/: test_combine.py  test_combine_metric_tables.py  test_compute_metrics.py  test_drop.py  test_evaluate.py  test_extract_non_dominated.py  test_rank.py  test_rename.py  test_score.py  test_sort.py  test_strip.py  test_top_k.py
tests/metrics/: test_authenticity.py  test_clipped_density.py  test_clipped_density_coverage.py  test_conformity_score.py  test_count.py  test_diversity.py  test_fbd.py  test_fkea.py  test_fold.py  test_hitrate.py  test_hypervolume.py  test_id.py  test_jaccard_similarity.py  test_kl_divergence.py  test_kmer_jaccard_similarity.py  test_mmd.py  test_mutational_robustness.py  test_novelty.py  test_precision_recall.py  test_subset.py  test_threshold.py  test_uniqueness.py
tests/models/: test_ensemble.py  test_esm2_embeddings.py  test_kmers_embeddings.py
tests/models/fast/: test_ensemble.py  test_kmers.py  test_molecule_descriptors.py
tests/models/slow/: test_dna_bert2.py  test_esm2.py  test_esm_fold.py  test_esmif1.py  test_gena_lm.py  test_hyformer.py  test_prost_t5.py  test_rna_fm.py
