[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pepme"
version = "0.1.0"
description = "Metrics for benchmarking peptide generation models."
readme = "README.md"
authors = [
    { name = "Rasmus Møller-Larsen" },
    { name = "Jan Olszewski" }
]
requires-python = ">=3.10"
dependencies = [
    "matplotlib>3.6",
    "numpy",
    "pandas>=1.5",
    "pymoo",
    "scipy",
    "torch",
    "tqdm",
    "transformers",
    "scikit-learn<1.7.0",
    "umap-learn",
    "modlamp",
    "pylev",
]

[project.optional-dependencies]
doc = [
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
    "sphinx==7.1.2",
    "sphinx-rtd-theme==1.3.0rc1",
    "nbsphinx",
    "myst-parser",
    "myst_nb",
    "scanpydoc",
    "seaborn",
    "sphinx-book-theme",
    "sphinx-gallery",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]

dev = [
    "mypy>=1.16.1",
    "nbstripout>=0.8.1",
    "pandas-stubs",
    "pre-commit>=3.0.0",
    "pytest>=8.4.1",
    "ruff>=0.12.0",
    "scipy-stubs",
    "types-tqdm",
    "ipykernel>=6.29.5",
    "ipywidgets>=8.1.7",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    #"D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "TCH",  # Typing imports
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don't want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
no_strict_optional = true
