[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "seqme"
version = "0.0.1"
description = "Metrics for evaluating biological sequence generation models."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.10"
authors = [
    { name = "Rasmus Møller-Larsen" },
    { name = "Adam Izdebski" },
    { name = "Jan Olszewski" },
]
maintainers = [
    {name = "Rasmus Møller-Larsen"},
]
urls.Documentation = "https://seqme.readthedocs.io"
urls.Source = "https://github.com/szczurek-lab/seqme"
urls.Home-page = "https://github.com/szczurek-lab/seqme"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: Jupyter",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Visualization",
]

dependencies = [
    "matplotlib>=3.6",
    "numpy",
    "pandas>=1.5",
    "pymoo",
    "scipy",
    "torch",
    "tqdm",
    "transformers",
    "scikit-learn<1.7.0",
    "umap-learn",
    "modlamp",
    "pylev",
]

[project.optional-dependencies]
doc = [
    "ipykernel",
    "ipywidgets",
    "sphinx",
    "nbsphinx",
    "myst-parser",
    "myst_nb",
    "scanpydoc",
    "seaborn",
    "sphinx-book-theme",
    "sphinx-gallery",
    "sphinx-copybutton",
    "sphinx-autodoc-typehints",
]

dev = [
    "mypy",
    "nbstripout",
    "pandas-stubs",
    "pre-commit",
    "pytest",
    "ruff",
    "scipy-stubs",
    "types-tqdm",
    "ipykernel",
    "ipywidgets",
]

[tool.ruff]
line-length = 120

[tool.ruff.format]
docstring-code-format = true

[tool.ruff.lint]
select = [
    "F",  # Errors detected by Pyflakes
    "E",  # Error detected by Pycodestyle
    "W",  # Warning detected by Pycodestyle
    "I",  # isort
    #"D",  # pydocstyle
    "B",  # flake8-bugbear
    "TID",  # flake8-tidy-imports
    "C4",  # flake8-comprehensions
    "BLE",  # flake8-blind-except
    "UP",  # pyupgrade
    "TCH",  # Typing imports
    "RUF100",  # Report unused noqa directives
]
ignore = [
    # line too long -> we accept long comment lines; formatter gets rid of long code lines
    "E501",
    # Do not assign a lambda expression, use a def -> lambda expression assignments are convenient
    "E731",
    # allow I, O, l as variable names -> I is the identity matrix
    "E741",
    # Missing docstring in public package
    "D104",
    # Missing docstring in public module
    "D100",
    # Missing docstring in __init__
    "D107",
    # Errors from function calls in argument defaults. These are fine when the result is immutable.
    "B008",
    # __magic__ methods are are often self-explanatory, allow missing docstrings
    "D105",
    # first line should end with a period [Bug: doesn't work with single-line docstrings]
    "D400",
    # First line should be in imperative mood; try rephrasing
    "D401",
    ## Disable one in each pair of mutually incompatible rules
    # We don't want a blank line before a class docstring
    "D203",
    # We want docstrings to start immediately after the opening triple quote
    "D213",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
strict = false
pretty = true
show_column_numbers = true
show_error_codes = true
show_error_context = true
ignore_missing_imports = true
no_strict_optional = true
